Fix scrollbar being created next to space, which was held free for it
Scrollbar was being applied to child of body, however overflow
happenende in body, now element takes up full width and height of
screen.

--- a/src/styles/ProjectOverview.css
+++ b/src/styles/ProjectOverview.css
@@ -2,6 +2,9 @@
     .project-overview {
         scrollbar-gutter: stable;
         overflow-y: auto;
+
+        width: 100vw;
+        height: 100vh;
     }
 }
 
